--- a/style.css
+++ b/style.css
@@ -2,4 +2,17 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align: center;
+}
+div{
+  display:inline-block;
+  margin: 150px 150px;
+  
+}
+#head{
+  font-family: 'Times New Roman', Times, serif;
+}
+#details{
+  background-color: red;
+  height: 300px;
 }
